--- a/profile.html
+++ b/profile.html
@@ -6,6 +6,7 @@
             <li>1998 - pcのゲームで遊ぶ幼少期時代、図工と美術に命をかけた小学生・中学生時代を過ごす</li>
             <li class="ml-2">︙</li>
             <li>2016 - 東京電機大学理工学部情報システムデザイン学系 入学</li>
+            <li>2017 - 画像処理エンジニア検定　ベーシック 取得</li>
             <li>2018 - 独学でhtml css jsの勉強を始める</li>
             <li>2019 - <a class="gs-btn" type='button'>卒業研究 電子書籍のページ遷移に関する研究を行う</a></li>
             <li>2020 - 東京電機大学理工学部情報システムデザイン学系 卒業 </li>
