--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
     <head>
-        <title>portfolio byUM</title>
+        <title>portfolio byM.U</title>
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <link rel ="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"/>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">    </head>
@@ -12,9 +12,8 @@
         
         <div class="front w-100 h-100">
             <div class="solid-box w-50 h-25 mr-auto ml-auto pt-4 pb-4 text-center"type="button">
-                <h1 class="display-2 portfolio-title mb-0">portfolio by UM</h1>
+                <h1 class="display-2 portfolio-title mb-0">portfolio by M.U</h1>
             </div>
-            <h5 class="display-4 text-center w-100 click-me mr-auto ml-auto">/click me\</h5>
         </div>
         
         <div class="row nav">
