--- a/profile.html
+++ b/profile.html
@@ -8,7 +8,7 @@
             <li>2016 - 東京電機大学理工学部情報システムデザイン学系 入学</li>
             <li>2017 - 画像処理エンジニア検定　ベーシック 取得</li>
             <li>2018 - 独学でhtml css jsの勉強を始める</li>
-            <li>2019 - <a class="gs-btn" type='button'>卒業研究 電子書籍のページ遷移に関する研究を行う</a></li>
+            <li>2019 - 卒業研究 電子書籍のページ遷移に関する研究を行う</li>
             <li>2020 - 東京電機大学理工学部情報システムデザイン学系 卒業 </li>
             <li>2020 - テックアカデミーwebアプリケーションコース 受講</li>
         </ul>
@@ -16,20 +16,25 @@
     <div class="skill text-right">
         <h3 class="mt-0 skill-title">skill</h3>
         <ul class="pr-0 mb-0 mr-4 mt-2 skill-list">
-            <li class="skill-graph mb-1 sg-1"style="margin-left:30%;"><a class="sg-text-1">ruby on rails / studio clip / javascript / jquery / html </a></li>
-            <li class="skill-graph mb-1 sg-2"style="margin-left:40%"><a class="sg-text-2">mysql / css / bootstrap </a></li>
-            <li class="skill-graph mb-1 sg-3"style="margin-left:50%"><a class="sg-text-3">java / c / c# </a></li>
-            <li class="skill-graph mb-1 sg-4"style="margin-left:60%"><a class="sg-text-4">unity / photoshop / illustrator / indesign / node.js </a></li>
-            <li class="skill-graph mb-1 sg-5"style="margin-left:70%"><a class="sg-text-5">arduino / maya </a></li>
+            <li class="skill-graph mb-1 sg-1" style="margin-left:30%;"><a class="sg-text-1">ruby on rails / studio clip / javascript / jquery / html </a></li>
+            <li class="skill-graph mb-1 sg-2" style="margin-left:40%"><a class="sg-text-2">mysql / css / bootstrap </a></li>
+            <li class="skill-graph mb-1 sg-3" style="margin-left:50%"><a class="sg-text-3">java / c / c# </a></li>
+            <li class="skill-graph mb-1 sg-4" style="margin-left:60%"><a class="sg-text-4">unity / photoshop / illustrator / indesign / node.js </a></li>
+            <li class="skill-graph mb-1 sg-5" style="margin-left:70%"><a class="sg-text-5">arduino / maya </a></li>
         </ul>
     </div>
     <div class="learned">
-        <h3 class="mt-2 learned-title">What i learned</h3>
+        <h3 class="mt-2 learned-title">2020/10</h3>
         <ul class="pl-0 mb-0 ml-4 mt-2 learned-list">
+            <li>プログラミングからいったん離れて就活中</li>
+            <li>SNSヘビーユーザーがSNSから離れて生活する実験中</li>
+            <li>新しい何かを作りたい...</li>
+            <!--　
             <li>造形デザイン / デザイン学 / 空間演出デザイン / 美術・芸術学 / 色彩論 / イメージ創造学 / 感性とデザイン / 遊戯文化論</li>
             <li>コミュニケーション科学 / 社会心理学 / 感性工学 / インタラクティブデザイン論 / アミューズメントデザイン論</li>
-            <li>映像情報システム / 出版メディア論 /  画像工学 / コンピュータグラフィックス / アミューズメントデバイス論</li>
-            <li>プログラミング基礎  / 3Dゲームプログラミング / オブジェクト指向プログラミング</li>
+            <li>映像情報システム / 出版メディア論 / 画像工学 / コンピュータグラフィックス / アミューズメントデバイス論</li>
+            <li>プログラミング基礎 / 3Dゲームプログラミング / オブジェクト指向プログラミング</li>
+            -->
         </ul>
     </div>
 </div>
