--- a/illust.html
+++ b/illust.html
@@ -1,23 +1,28 @@
 <div class="">
-    <h1 class="title">illustration <a class="h4">with photoshop clip studio</a></h1>
+    <h1 class="title">illustration <a class="h4">簡単なイラストもかけます</a></h1>
     <div class="row text-center pt-5">
         <div class="col-sm-4">
-            <a href="https://dl.dropboxusercontent.com/s/ocf2c21f2sid0bq/flower_water.jpg" class="illust-img-1" target="_blank" rel="noopener"><img src="https://dl.dropboxusercontent.com/s/ocf2c21f2sid0bq/flower_water.jpg" width="200px" class="illust-img"></img></a>
+            <a href="https://dl.dropboxusercontent.com/s/ocf2c21f2sid0bq/flower_water.jpg" class="illust-img-1" target="_blank" rel="noopener"><img src="https://dl.dropboxusercontent.com/s/ocf2c21f2sid0bq/flower_water.jpg" width="200px" class="illust-img"></img>
+            </a>
         </div>
         <div class="col-sm-4">
-            <a href="https://dl.dropboxusercontent.com/s/399zwtqdzm4vszd/mashu_1x1.png" class="illust-img-2" target="_blank" rel="noopener"><img src="https://dl.dropboxusercontent.com/s/399zwtqdzm4vszd/mashu_1x1.png" width="200px"class="illust-img"></img></a>
+            <a href="https://dl.dropboxusercontent.com/s/399zwtqdzm4vszd/mashu_1x1.png" class="illust-img-2" target="_blank" rel="noopener"><img src="https://dl.dropboxusercontent.com/s/399zwtqdzm4vszd/mashu_1x1.png" width="200px" class="illust-img"></img>
+            </a>
         </div>
         <div class="col-sm-4">
-            <a href="https://dl.dropboxusercontent.com/s/54tqcnzj5nro0k4/25_5.png" class="illust-img-3" target="_blank" rel="noopener"><img src="https://dl.dropboxusercontent.com/s/54tqcnzj5nro0k4/25_5.png" width="200px"class="illust-img"></img></a>
+            <a href="https://dl.dropboxusercontent.com/s/54tqcnzj5nro0k4/25_5.png" class="illust-img-3" target="_blank" rel="noopener"><img src="https://dl.dropboxusercontent.com/s/54tqcnzj5nro0k4/25_5.png" width="200px" class="illust-img"></img>
+            </a>
         </div>
     </div>
     <div class="row text-center">
         <div class="offset-sm-2 col-sm-4">
-            <a href="https://dl.dropboxusercontent.com/s/eq4yrzdsyro900u/FULLMOON.png" class="illust-img-4" target="_blank" rel="noopener"><img src="https://dl.dropboxusercontent.com/s/eq4yrzdsyro900u/FULLMOON.png" width="200px"class="illust-img"></img></a>
+            <a href="https://dl.dropboxusercontent.com/s/eq4yrzdsyro900u/FULLMOON.png" class="illust-img-4" target="_blank" rel="noopener"><img src="https://dl.dropboxusercontent.com/s/eq4yrzdsyro900u/FULLMOON.png" width="200px" class="illust-img"></img>
+            </a>
 
         </div>
         <div class="col-sm-4">
-            <a href="https://dl.dropboxusercontent.com/s/k2b2lr47dptuy26/starry_sky_1x1.jpg" class="illust-img-5" target="_blank" rel="noopener"><img src="https://dl.dropboxusercontent.com/s/k2b2lr47dptuy26/starry_sky_1x1.jpg" width="200px"class="illust-img"></img></a>
+            <a href="https://dl.dropboxusercontent.com/s/k2b2lr47dptuy26/starry_sky_1x1.jpg" class="illust-img-5" target="_blank" rel="noopener"><img src="https://dl.dropboxusercontent.com/s/k2b2lr47dptuy26/starry_sky_1x1.jpg" width="200px" class="illust-img"></img>
+            </a>
 
         </div>
 
