--- a/profile.html
+++ b/profile.html
@@ -16,7 +16,7 @@
     <div class="skill text-right">
         <h3 class="mt-0 skill-title">skill</h3>
         <ul class="pr-0 mb-0 mr-4 mt-2 skill-list">
-            <li class="skill-graph mb-1 sg-1" style="margin-left:30%;"><a class="sg-text-1">ruby on rails / studio clip / javascript / jquery / html </a></li>
+            <li class="skill-graph mb-1 sg-1" style="margin-left:30%;"><a class="sg-text-1">ruby on rails /javascript / jquery / html / studio clip</a></li>
             <li class="skill-graph mb-1 sg-2" style="margin-left:40%"><a class="sg-text-2">mysql / css / bootstrap </a></li>
             <li class="skill-graph mb-1 sg-3" style="margin-left:50%"><a class="sg-text-3">java / c / c# </a></li>
             <li class="skill-graph mb-1 sg-4" style="margin-left:60%"><a class="sg-text-4">unity / photoshop / illustrator / indesign / node.js </a></li>
